<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.milen.grounpringtonesetter.ui.home.HomeScreen"
        android:label="Home"
        tools:layout="@layout/fragment_home_screen">

        <action
            android:id="@+id/action_home_to_picker"
            app:destination="@id/pickerFragment" />

        <action
            android:id="@+id/action_home_to_noInternet"
            app:destination="@id/noInternetFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="false" />

        <action
            android:id="@+id/action_home_to_deviceDefaultTones"
            app:destination="@id/deviceDefaultTonesFragment" />

        <action
            android:id="@+id/action_home_to_backupRestore"
            app:destination="@id/backupRestoreFragment" />
    </fragment>

    <fragment
        android:id="@+id/pickerFragment"
        android:name="com.milen.grounpringtonesetter.ui.picker.PickerScreenFragment"
        android:label="Picker"
        tools:layout="@layout/fragment_picker_screen">

        <argument
            android:name="mode"
            android:defaultValue="MANAGE"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/noInternetFragment"
        android:name="com.milen.grounpringtonesetter.ui.nointernet.NoInternetScreen"
        android:label="No Internet"
        tools:layout="@layout/fragment_no_internet_screen" />

    <fragment
        android:id="@+id/deviceDefaultTonesFragment"
        android:name="com.milen.grounpringtonesetter.ui.defaulttones.DeviceDefaultTonesScreen"
        android:label="Device Default Tones"
        tools:layout="@layout/fragment_device_default_tones" />

    <fragment
        android:id="@+id/backupRestoreFragment"
        android:name="com.milen.grounpringtonesetter.ui.backup.BackupRestoreScreen"
        android:label="@string/backup_restore_title"
        tools:layout="@layout/fragment_backup_restore" />
</navigation>
