<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTopActions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.milen.grounpringtonesetter.customviews.ui.buttons.CustomRoundedButton
            android:id="@+id/btnAddGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            app:buttonLabel="@string/add_group"
            app:layout_constraintEnd_toStartOf="@+id/ctcibToggleSearch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.milen.grounpringtonesetter.customviews.ui.buttons.CustomTextColorImageButton
            android:id="@+id/ctcibToggleSearch"
            android:layout_width="@dimen/icon_btn_size"
            android:layout_height="@dimen/icon_btn_size"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/search_group_hint"
            app:iconDrawable="@drawable/ic_search_24"
            app:layout_constraintBottom_toBottomOf="@+id/btnAddGroup"
            app:layout_constraintEnd_toStartOf="@+id/ctcibActionsMenu"
            app:layout_constraintStart_toEndOf="@+id/btnAddGroup"
            app:layout_constraintTop_toTopOf="@+id/btnAddGroup" />

        <com.milen.grounpringtonesetter.customviews.ui.buttons.CustomTextColorImageButton
            android:id="@+id/ctcibActionsMenu"
            android:layout_width="@dimen/icon_btn_size"
            android:layout_height="@dimen/icon_btn_size"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/home_actions"
            app:iconDrawable="@drawable/ic_settings_24"
            app:layout_constraintBottom_toBottomOf="@+id/ctcibToggleSearch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ctcibToggleSearch"
            app:layout_constraintTop_toTopOf="@+id/ctcibToggleSearch" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/buttonsBottomBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierAllowsGoneWidgets="false"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="btnAddGroup,ctcibToggleSearch,ctcibActionsMenu,flGroupSearchOverlay" />

        <FrameLayout
            android:id="@+id/flGroupSearchOverlay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/btnAddGroup"
            app:layout_constraintEnd_toStartOf="@+id/ctcibToggleSearch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnAddGroup">

            <com.milen.grounpringtonesetter.customviews.ui.texts.CustomInputView
                android:id="@+id/civGroupSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_group_hint" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.milen.grounpringtonesetter.customviews.ui.texts.CustomTextView
        android:id="@+id/no_item_disclaimer"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/items_not_found"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rwGroupItems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rwGroupItems"
        tools:visibility="visible" />

    <com.milen.grounpringtonesetter.customviews.ui.buttons.CustomRoundedButton
        android:id="@+id/btn_empty_add_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:visibility="gone"
        app:buttonLabel="@string/add_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_item_disclaimer"
        tools:visibility="visible" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rwGroupItems"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="8dp"
        android:clipToPadding="false"
        android:paddingBottom="12dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/llBillingsActions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clTopActions"
        tools:itemCount="12"
        tools:listitem="@layout/item_group_entity" />


    <LinearLayout
        android:id="@+id/llBillingsActions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/abHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.milen.grounpringtonesetter.customviews.ui.texts.CustomTextView
            android:id="@+id/ctvValidationPurchases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp"
            android:layout_marginVertical="8dp"
            android:text="@string/validating_purchases"
            tools:visibility="gone" />

        <com.milen.grounpringtonesetter.customviews.ui.buttons.CustomRoundedButton
            android:id="@+id/btnRemoveAds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp"
            android:layout_marginVertical="8dp"
            app:buttonLabel="@string/ad_free_forever"
            tools:visibility="gone" />

    </LinearLayout>

    <com.milen.grounpringtonesetter.customviews.ui.ads.AdBannerView
        android:id="@+id/abHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
